Avoid image jumping

--- a/microservices/www2/src/components/ImageCarousel/ImageCarousel.scss
+++ b/microservices/www2/src/components/ImageCarousel/ImageCarousel.scss
@@ -69,9 +69,9 @@
 
   .current-image {
     min-height: 500px;
-    img {
-      max-width: 100%;
-    }
+    max-width: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   @media screen and (max-width: $med) {
